--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2020 Mark Git.Training
+-->
 <head>
 	<title>An Exmple Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
